// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action creators startCreatingTransaction pushes the transaction and dispatches the new transaction and updated user 1`] = `
Array [
  Object {
    "payload": Object {
      "GLOBAL_LOADER": true,
    },
    "type": "SET_LOADER",
  },
  Object {
    "payload": Object {
      "GLOBAL_ERROR": "",
    },
    "type": "SET_ERROR",
  },
  Object {
    "payload": Object {
      "GLOBAL_LOADER": false,
    },
    "type": "SET_LOADER",
  },
  Object {
    "payload": Object {
      "name": "user",
    },
    "type": "[USER] Loaded_Details",
  },
  Object {
    "payload": Array [
      Object {
        "id": 5,
        "user": Object {
          "name": "user",
        },
      },
    ],
    "type": "TRANSACTIONS_LOADED",
  },
]
`;

exports[`action creators startDeletingTransaction updates the transaction and dispatches the new transaction and updated user 1`] = `
Array [
  Object {
    "payload": Object {
      "GLOBAL_LOADER": true,
    },
    "type": "SET_LOADER",
  },
  Object {
    "payload": Object {
      "GLOBAL_ERROR": "",
    },
    "type": "SET_ERROR",
  },
  Object {
    "payload": Object {
      "GLOBAL_LOADER": false,
    },
    "type": "SET_LOADER",
  },
  Object {
    "payload": Array [
      Object {
        "id": 5,
        "user": Object {
          "name": "user",
        },
      },
    ],
    "type": "TRANSACTIONS_LOADED",
  },
  Object {
    "payload": Object {
      "name": "user",
    },
    "type": "[USER] Loaded_Details",
  },
]
`;

exports[`action creators startLoadingTransactions pushes the transaction and dispatches the new transaction and updated user 1`] = `
Array [
  Object {
    "payload": Object {
      "GLOBAL_LOADER": true,
    },
    "type": "SET_LOADER",
  },
  Object {
    "payload": Object {
      "GLOBAL_ERROR": "",
    },
    "type": "SET_ERROR",
  },
  Object {
    "payload": Object {
      "GLOBAL_LOADER": false,
    },
    "type": "SET_LOADER",
  },
  Object {
    "payload": Array [
      Object {
        "id": 2,
      },
      Object {
        "id": 3,
      },
    ],
    "type": "TRANSACTIONS_LOADED",
  },
]
`;

exports[`transaction reducer with a transactionsLoaded action merges transaction to state 1`] = `
Object {
  "2": Object {
    "id": 2,
  },
  "3": Object {
    "id": 3,
  },
}
`;
